# h4h-keffinn

./: EyetrackingThread.py  README.md  SpeechThread.py  about-keffinn.py  about-keffinn.ui  about_keffinn.py  berhasil-popup.ui  berhasil_popup.py  card.py  card.ui  cursor_controller.py  ftwoop.py  gagal-popup.ui  gagal_popup.py  keffinn_rc.py  main.py  pyproject.toml  qt_eye_demo.py  requirements.txt  show_gagal_popup.py  show_popup.py  speech_recognition_model.py  tempCodeRunnerFile.py  test.py  welcomescreen.py  welcomescreen2.py
eyetracking/: calibration.py  cursor_controller.py  demo.py  qt_eye_demo.py  speech_processor.py
speech_recognition/: cursor_controller.py  speech_recognition_model.py
src/: check.qrc  icons.qrc  keffinn.qrc
voice_command/: cursor_controller.py  speech_processor.py  speech_recognition_model.py
