[project]
name = "h4h-keffinn"
version = "0.1.0"
description = "Empowering accessibility through voice & vision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "jax>=0.5.3 ; sys_platform != 'darwin'",
    "jax-metal>=0.1.1 ; sys_platform == 'darwin'",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyside6>=6.8.2.1",
    "scikit-learn>=1.6.1",
    "speechrecognition>=3.14.1",
    "torch>=2.6.0",
]
